README is updated and test.py is correted

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SQLALCHEMY_DATABASE_URI=sqlite:///todo.db
+URL=http://127.0.0.1:5000
+#when form heroku
+#URL=https://guarded-chamber-02082.herokuapp.com
